--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,8 @@ body {
 	border-right: 1px solid $border;
 	margin: 0 auto;
 	flex-flow: column;
+	position: relative;
+	top: 2rem;
 	width: 40%;
 	background: $darkgrey;
 	font-family: 'Asap' , sans-serif;	
@@ -79,6 +81,57 @@ body {
 .last{
 	background: $orange;
 	color: $white;		
+}
+
+/*************************************
+******** MEDIA QUERIES ***************/
+
+@media only screen and (max-width : 1024px){
+
+	#container {
+		width: 50%;
+	}
+
+}
+
+@media only screen and (max-width : 768px){
+	
+		#container {
+			width: 60%;
+		}
+	
+}
+
+@media only screen and (max-width : 600px){
+	
+		#container {
+			width: 70%;
+		}
+	
+}
+
+@media only screen and (max-width : 600px){
+	
+		#container {
+			width: 80%;
+		}
+	
+}
+
+@media only screen and (max-width : 414px){
+	
+		#container {
+			width: 90%;
+		}
+	
+}
+
+@media only screen and (max-width : 320px){
+	
+		#container {
+			width: 95%;
+		}
+	
 }
 
 
