--- a/sass/style.scss
+++ b/sass/style.scss
@@ -83,8 +83,8 @@ body {
 	color: $white;		
 }
 
-/*************************************
-******** MEDIA QUERIES ***************/
+/***************************************
+********** MEDIA QUERIES ***************/
 
 @media only screen and (max-width : 1024px){
 
