--- a/sass/style.scss
+++ b/sass/style.scss
@@ -50,6 +50,7 @@ body {
 		border-right: none;
 		font-weight: thin;
 		border-top: none;
+		border-radius: none;
 		border-left: 1px solid  $border;
 		border-bottom: 1px solid $border;
 		font-size: 2rem;
